[tool.poetry]
name = "microblog_fastapi"
version = "0.1.0"
description = ""
authors = ["VasiliKavaleu <vasiliy.kavaleu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.17"
alembic = "^1.6.5"
fastapi = {extras = ["all"], version = "^0.65.1"}
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
